--- a/404.html
+++ b/404.html
@@ -1,2 +1,2 @@
-header<div class=not-found>404</div><footer class=footer><span>&copy; 2021 <a href=https://www.vinhomeu.com/>Vinhomeu</a></span>
-<span>&#183;</span></footer>
+header<div class=not-found>404</div><footer class=footer><div class=footer-nav><h1><a href=mailto:vinhomeuvinho@gmail.com target=_blank>Enquiries</a><br><a href=https://www.instagram.com/vinhomeuvinho/ target=_blank>Instagram</a></h1></div><div class="flex footer-notes"><div><p><i>Body Font: </i><a href=https://fonts.google.com/specimen/Quando>Quando</a><br><i>Typographer: </i><a href=https://novatypefoundry.com/about/>Joana Correia</a> | Porto,
+Portugal</p></div><div><p><i>Image: </i><a href=https://en.wikipedia.org/wiki/Douro_DOC>Alto Douro Wine Region</a></p></div><div><p>All rights reserved<br>© Copyright 2021, Vinhomeu</p></div></div></footer>
