deploy: 7c0402cf396950abde9f9cb1b462bd3958e7fdae

--- a/de/wines/convento-da-vila-colheita-doc/index.html
+++ b/de/wines/convento-da-vila-colheita-doc/index.html
@@ -1,2 +1,36 @@
-<!doctype html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=description content="Vinhomeu is dedicated to showcasing distinct and memorable Portuguese wines that tell the story of time and place with each sip."><title>Convento da Vila Colheita &ndash; Vinhomeu</title><link rel=preconnect href=https://fonts.gstatic.com><link href="https://fonts.googleapis.com/css2?family=Quando&family=ZCOOL+KuaiLe&display=swap" rel=stylesheet><link rel=stylesheet href=https://www.vinhomeu.com/scss/main.css></head><body><nav class=navigation><ul><li><a href=/weinsorten/>Weinsorten</a></li><li><a href=/de/about/>Über</a></li><li class=language-selector><a href=/en id=en-us>EN</a> /
-<a href=/de id=de-de>DE</a></li></ul></nav><div class=single><div class=single__header style=background-image:url(/images/wines/convento-da-vila-colheita-red.png)><h1>Convento da Vila Colheita</h1></div><div class="single__content mt-4"><p>Syrah, Alicante Bouschet and Touriga Nacional: an eclectic blend of amazing grapes. 15 months from harvest to your glass. You will get a dark ruby red wine with intense mature red fruit fragrances, or should I say grapes that endured some of the highest temperatures of the country? Best enjoyed with red meat, fatty fisch and soft cheese. Don&rsquo;t forget to invite your friends!</p><p><a href=/region/portugal>Link</a></p></div></div></body></html>
+<!doctype html><html>
+<head>
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta name=description content="Vinhomeu is dedicated to showcasing distinct and memorable Portuguese wines that tell the story of time and place with each sip.">
+<title>
+Convento da Vila Colheita &ndash; Vinhomeu
+</title>
+<link rel=preconnect href=https://fonts.gstatic.com>
+<link href="https://fonts.googleapis.com/css2?family=Quando&family=ZCOOL+KuaiLe&display=swap" rel=stylesheet>
+<link rel=stylesheet href=https://www.vinhomeu.com/scss/main.css>
+</head>
+<body>
+<nav class=navigation>
+<ul><li>
+<a href=/weinsorten/>Weinsorten</a>
+</li><li>
+<a href=/de/about/>Über</a>
+</li>
+<li class=language-selector>
+<a href=/en id=en-us>EN</a> /
+<a href=/de id=de-de>DE</a>
+</li>
+</ul>
+</nav>
+<div class=single>
+<div class=single__header style=background-image:url(/images/wines/convento-da-vila-colheita-red.png)>
+<h1>Convento da Vila Colheita</h1>
+</div>
+<div class="single__content mt-4">
+<p>Syrah, Alicante Bouschet and Touriga Nacional: an eclectic blend of amazing grapes. 15 months from harvest to your glass. You will get a dark ruby red wine with intense mature red fruit fragrances, or should I say grapes that endured some of the highest temperatures of the country? Best enjoyed with red meat, fatty fisch and soft cheese. Don&rsquo;t forget to invite your friends!</p>
+<p><a href=/region/portugal>Link</a></p>
+</div>
+</div>
+</body>
+</html>
