--- a/de/wines/vale-da-raposa/index.html
+++ b/de/wines/vale-da-raposa/index.html
@@ -1,2 +1,35 @@
-<!doctype html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=description content="Vinhomeu is dedicated to showcasing distinct and memorable Portuguese wines that tell the story of time and place with each sip."><title>Vale da Raposa &ndash; Vinhomeu</title><link rel=preconnect href=https://fonts.gstatic.com><link href="https://fonts.googleapis.com/css2?family=Quando&family=ZCOOL+KuaiLe&display=swap" rel=stylesheet><link rel=stylesheet href=https://www.vinhomeu.com/scss/main.css></head><body><nav class=navigation><ul><li><a href=/weinsorten/>Weinsorten</a></li><li><a href=/de/about/>Über</a></li><li class=language-selector><a href=/en id=en-us>EN</a> /
-<a href=/de id=de-de>DE</a></li></ul></nav><div class=single><div class=single__header style=background-image:url(/images/wines/vale-da-raposa-white.png)><h1>Vale da Raposa</h1></div><div class="single__content mt-4"><p>This was one of the first Douro white wines produced by the Alves de Sousa family, who started to turn their attention to the local grapes to produce outstanding wines. Vale da Raposa’s Goveio and Malvasia Fina are a great combination and a good example of the underground character of portuguese white wine grape varieties and the unique, pungent taste that only the climate of the Douro Valley can give to their grapes.</p></div></div></body></html>
+<!doctype html><html>
+<head>
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta name=description content="Vinhomeu is dedicated to showcasing distinct and memorable Portuguese wines that tell the story of time and place with each sip.">
+<title>
+Vale da Raposa &ndash; Vinhomeu
+</title>
+<link rel=preconnect href=https://fonts.gstatic.com>
+<link href="https://fonts.googleapis.com/css2?family=Quando&family=ZCOOL+KuaiLe&display=swap" rel=stylesheet>
+<link rel=stylesheet href=https://www.vinhomeu.com/scss/main.css>
+</head>
+<body>
+<nav class=navigation>
+<ul><li>
+<a href=/weinsorten/>Weinsorten</a>
+</li><li>
+<a href=/de/about/>Über</a>
+</li>
+<li class=language-selector>
+<a href=/en id=en-us>EN</a> /
+<a href=/de id=de-de>DE</a>
+</li>
+</ul>
+</nav>
+<div class=single>
+<div class=single__header style=background-image:url(/images/wines/vale-da-raposa-white.png)>
+<h1>Vale da Raposa</h1>
+</div>
+<div class="single__content mt-4">
+<p>This was one of the first Douro white wines produced by the Alves de Sousa family, who started to turn their attention to the local grapes to produce outstanding wines. Vale da Raposa’s Goveio and Malvasia Fina are a great combination and a good example of the underground character of portuguese white wine grape varieties and the unique, pungent taste that only the climate of the Douro Valley can give to their grapes.</p>
+</div>
+</div>
+</body>
+</html>
