--- a/varieties/index.html
+++ b/varieties/index.html
@@ -1,2 +1,52 @@
-<!doctype html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=description content="Vinhomeu is dedicated to showcasing distinct and memorable Portuguese wines that tell the story of time and place with each sip."><title>Varieties &ndash; Vinhomeu</title><link rel=preconnect href=https://fonts.gstatic.com><link href="https://fonts.googleapis.com/css2?family=Quando&family=ZCOOL+KuaiLe&display=swap" rel=stylesheet><link rel=stylesheet href=https://www.vinhomeu.com/scss/main.css></head><body><nav class=navigation><ul><li><a href=/varieties/>Varieties</a></li><li><a href=/about/>About</a></li><li class=language-selector><a href=/en id=en-us>EN</a> /
-<a href=/de id=de-de>DE</a></li></ul></nav><div class=single><div class=single__header style=background-image:url(/images/region-portugal-bg.jpg)><h1>Varieties</h1></div><div class="single__content mt-4"><h1 id=vinho-verde>Vinho Verde</h1><p>Verde stands for green. Yes green, there is a green wine out there and it grows in Minho, a region on the very north of Portugal that rhymes exquisitely with &ldquo;vinho&rdquo; and funilly enough it is one of the greenest in the whole country.</p><p>No surprise then that this is home to the DOC region of vinho verde grapes that you will find nowhere else in the world. Back in the days, thanks to a glitch in the fermentation process, the wine ended up having more &ldquo;bubbles&rdquo; than usual.</p><p>It ends up, that people quite liked that mistake! Yet don&rsquo;t be mistaken: it&rsquo;s not sparkling, it&rsquo;s not prosecco, it&rsquo;s vinho verde and it&rsquo;s best consumed with loved ones, in summer, on ice if you may!</p><h1 id=rose>Rose</h1><p>&ldquo;Cor-de-rosa?&rdquo; My dad told me that, once I was so surprised to see a pink wine that I begged him to try it, it seemed so fresh and inviting, I probably thought it would taste like strawberries.</p><p>I was 9, and it didn&rsquo;t!</p><p>Fast forward into the future and now this is my kind of strawberry lemonade! Rosé is beloved worldwide, it&rsquo;s vibrant colour makes ist relatives &ldquo;red&rdquo; and &ldquo;white&rdquo; look dull. But that is not the idea!</p><p>While verdes and brancos bring you the citrus, this brings you the tropical flair to your taste buds. Grapes are so much more than just grapes, and wise hand work them well and to ist full potential!</p><h1 id=vinho-branco>Vinho Branco</h1><p>Sauvi..what? With more than 250 indigenous grapes, Portuguese winemakers prefer to stick to their roots instead of going for the internationally acclaimed and beloved Sauvignons and Chardonnays.</p><p>No wonder that people are unaware of names like Malvasia Fina, Alfrocheiro and Trajadura, they are absolute tongue twisters, but taste amazing.</p><p>While the prickly Vinho Verde is arguably the most famous &ldquo;white&rdquo; wine from the north of Portugal, the dry climate with almost no rainfall of the south of the country makes it more challenging to produce white wines…but not impossible.</p><p>All in all excelent reasons to dive into the &ldquo;underground&rdquo; world of portuguese whites.</p><h1 id=tinto>Tinto</h1><p>In Portugal, the most renowned and beloved wine regions of the country - Douro and Alentejo - are known for their very hot summers.</p><p>This heat in the final months before the harvest are the ideal boost for those sugar levels inside the grape, producing na intense and full bodied final product of deep red, or should I say tinto, deliciousness.</p><p>Pour a glass of one of these wines and you will see the sinuous curves of the stunning Douro valley and the cork oak filled endless plains of Alentejo. Only 400 km distance from each other and such different stories to tell.</p></div></div></body></html>
+<!doctype html><html>
+<head>
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta name=description content="Vinhomeu is dedicated to showcasing distinct and memorable Portuguese wines that tell the story of time and place with each sip.">
+<title>
+Varieties &ndash; Vinhomeu
+</title>
+<link rel=preconnect href=https://fonts.gstatic.com>
+<link href="https://fonts.googleapis.com/css2?family=Quando&family=ZCOOL+KuaiLe&display=swap" rel=stylesheet>
+<link rel=stylesheet href=https://www.vinhomeu.com/scss/main.css>
+</head>
+<body>
+<nav class=navigation>
+<ul><li>
+<a href=/varieties/>Varieties</a>
+</li><li>
+<a href=/about/>About</a>
+</li>
+<li class=language-selector>
+<a href=/en id=en-us>EN</a> /
+<a href=/de id=de-de>DE</a>
+</li>
+</ul>
+</nav>
+<div class=single>
+<div class=single__header style=background-image:url(/images/region-portugal-bg.jpg)>
+<h1>Varieties</h1>
+</div>
+<div class="single__content mt-4">
+<h1 id=vinho-verde>Vinho Verde</h1>
+<p>Verde stands for green. Yes green, there is a green wine out there and it grows in Minho, a region on the very north of Portugal that rhymes exquisitely with &ldquo;vinho&rdquo; and funilly enough it is one of the greenest in the whole country.</p>
+<p>No surprise then that this is home to the DOC region of vinho verde grapes that you will find nowhere else in the world. Back in the days, thanks to a glitch in the fermentation process, the wine ended up having more &ldquo;bubbles&rdquo; than usual.</p>
+<p>It ends up, that people quite liked that mistake! Yet don&rsquo;t be mistaken: it&rsquo;s not sparkling, it&rsquo;s not prosecco, it&rsquo;s vinho verde and it&rsquo;s best consumed with loved ones, in summer, on ice if you may!</p>
+<h1 id=rose>Rose</h1>
+<p>&ldquo;Cor-de-rosa?&rdquo; My dad told me that, once I was so surprised to see a pink wine that I begged him to try it, it seemed so fresh and inviting, I probably thought it would taste like strawberries.</p>
+<p>I was 9, and it didn&rsquo;t!</p>
+<p>Fast forward into the future and now this is my kind of strawberry lemonade! Rosé is beloved worldwide, it&rsquo;s vibrant colour makes ist relatives &ldquo;red&rdquo; and &ldquo;white&rdquo; look dull. But that is not the idea!</p>
+<p>While verdes and brancos bring you the citrus, this brings you the tropical flair to your taste buds. Grapes are so much more than just grapes, and wise hand work them well and to ist full potential!</p>
+<h1 id=vinho-branco>Vinho Branco</h1>
+<p>Sauvi..what? With more than 250 indigenous grapes, Portuguese winemakers prefer to stick to their roots instead of going for the internationally acclaimed and beloved Sauvignons and Chardonnays.</p>
+<p>No wonder that people are unaware of names like Malvasia Fina, Alfrocheiro and Trajadura, they are absolute tongue twisters, but taste amazing.</p>
+<p>While the prickly Vinho Verde is arguably the most famous &ldquo;white&rdquo; wine from the north of Portugal, the dry climate with almost no rainfall of the south of the country makes it more challenging to produce white wines…but not impossible.</p>
+<p>All in all excelent reasons to dive into the &ldquo;underground&rdquo; world of portuguese whites.</p>
+<h1 id=tinto>Tinto</h1>
+<p>In Portugal, the most renowned and beloved wine regions of the country - Douro and Alentejo - are known for their very hot summers.</p>
+<p>This heat in the final months before the harvest are the ideal boost for those sugar levels inside the grape, producing na intense and full bodied final product of deep red, or should I say tinto, deliciousness.</p>
+<p>Pour a glass of one of these wines and you will see the sinuous curves of the stunning Douro valley and the cork oak filled endless plains of Alentejo. Only 400 km distance from each other and such different stories to tell.</p>
+</div>
+</div>
+</body>
+</html>
