deploy: 4af7de314077d2ac5ce8719462a9deb6f4a5e5e8

--- a/de/index.html
+++ b/de/index.html
@@ -14,7 +14,7 @@ Vinhomeu
 <body>
 <nav class=navigation>
 <ul><li>
-<a href=/weinsorten/>Weinsorten</a>
+<a href=/de/varieties/>Weinsorten</a>
 </li><li>
 <a href=/de/about/>Über</a>
 </li>
@@ -41,11 +41,10 @@ Vinhomeu
 <h1 class=mb-1>Convento da Vila Colheita</h1>
 <div class="mb-1 italic homepage__wines-features">
 <p>JAHR: 2017</p>
-<p>RECOMMENDATION: Drink at 15-17°C</p>
+<p>EMPFEHLUNG: Trinken bei 15-17°C</p>
 <p>VIELFALT: Red</p>
 </div>
-<p>Syrah, Alicante Bouschet and Touriga Nacional: an eclectic blend of amazing grapes. 15 months from harvest to your glass. You will get a dark ruby red wine with intense mature red fruit fragrances, or should I say grapes that endured some of the highest temperatures of the country? Best enjoyed with red meat, fatty fisch and soft cheese. Don&rsquo;t forget to invite your friends!</p>
-<p><a href=/region/portugal>Link</a></p>
+<p>Syrah, Alicante Bouschet und Touriga Nacional: eine vielseitige Mischung aus erstaunlichen Trauben. 15 Monate von der Ernte bis zum Glas. Sie erhalten einen dunklen rubinroten Wein mit intensiven Düften von reifen roten Früchten, oder sollte ich sagen Trauben, die einige der höchsten Temperaturen des Landes ausgehalten haben? Am besten zu rotem Fleisch, fettem Fisch und Weichkäse. Vergiss nicht, deine Freunde einzuladen!</p>
 </div>
 </div>
 </div>
@@ -57,11 +56,10 @@ Vinhomeu
 <div class="homepage__wines-content__spacing m-3">
 <h1 class=mb-1>Santo do Monte</h1>
 <div class="mb-1 italic homepage__wines-features">
-<p>RECOMMENDATION: Serve cold</p>
+<p>EMPFEHLUNG: Kalt servieren</p>
 <p>VIELFALT: Grun (Vinho Verde)</p>
 </div>
-<p>This &ldquo;Saint of the Hill'' embodies the freshness that a good Vinho Verde should always aim to transmit: a long summer evening in a citrus orchard. It&rsquo;s prickly, it&rsquo;s fresh and its best served cold, even on ice if you may. This should be your new aperitivo, your new &ldquo;Sekt auf Eis&rdquo;, the wine everyone wants you to bring to their dinner parties, lunches or BBQ.</p>
-<p><a href=/region/portugal>Link</a></p>
+<p>Dieser &ldquo;Saint of the Hill&rdquo; verkörpert die Frische, die ein guter Vinho Verde immer vermitteln sollte: einen langen Sommerabend in einer Zitrusplantage. Es ist stachelig, frisch und wird am besten kalt serviert, sogar auf Eis, wenn Sie dürfen. Dies sollte Ihr neuer Aperitivo sein, Ihr neuer &ldquo;Sekt auf Eis&rdquo;, der Wein, den jeder von Ihnen zu seinen Dinnerpartys, Mittagessen oder Grillabenden mitbringen möchte.</p>
 </div>
 </div>
 </div>
@@ -76,7 +74,7 @@ Vinhomeu
 <p>JAHR: 2018</p>
 <p>VIELFALT: Weiss</p>
 </div>
-<p>This was one of the first Douro white wines produced by the Alves de Sousa family, who started to turn their attention to the local grapes to produce outstanding wines. Vale da Raposa’s Goveio and Malvasia Fina are a great combination and a good example of the underground character of portuguese white wine grape varieties and the unique, pungent taste that only the climate of the Douro Valley can give to their grapes.</p>
+<p>Dies war einer der ersten Douro-Weißweine, die von der Familie Alves de Sousa hergestellt wurden, die begann, sich den lokalen Trauben zuzuwenden, um hervorragende Weine zu produzieren. Goveio und Malvasia Fina von Vale da Raposa sind eine großartige Kombination und ein gutes Beispiel für den unterirdischen Charakter der portugiesischen Weißweinrebsorten und den einzigartigen, scharfen Geschmack, den nur das Klima des Douro-Tals ihren Trauben verleihen kann.</p>
 </div>
 </div>
 </div>
@@ -89,10 +87,10 @@ Vinhomeu
 <h1 class=mb-1>Zimbro</h1>
 <div class="mb-1 italic homepage__wines-features">
 <p>JAHR: 2015</p>
-<p>RECOMMENDATION: Drink at 16-18°C</p>
+<p>EMPFEHLUNG: Trinken bei 16-18°C</p>
 <p>VIELFALT: Rot</p>
 </div>
-<p>Douro in it&rsquo;s full power! This thick inky tinto made of the local Touriga Nacional, Tinta Roriz and Touriga Francesa is a great example of this region&rsquo;s exceptional wines. And this family run vineyard is pure winemaker art, that you should definitely about. Enjoy it best with friends and a nice plate of pasta, red meats or your favourite cheese.</p>
+<p>Douro in voller Kraft! Dieser dicke, tintofarbene Tinto aus den lokalen Touriga Nacional, Tinta Roriz und Touriga Francesa gehört laut vivino.com zu den Top 7% der besten Weine der Welt und ist ein großartiges Beispiel für die außergewöhnlichen Weine dieser Region. Dieses familiengeführte Weingut ist reine Winzerkunst, die Sie unbedingt besuchen sollten. Genießen Sie ihn am besten mit Freunden und einem schönen Teller Pasta, rotem Fleisch oder Ihrem Lieblingskäse.</p>
 </div>
 </div>
 </div>
@@ -101,10 +99,10 @@ Vinhomeu
 <div class="homepage__about__content mb-4">
 <div>
 <img class=homepage__about__light src=/images/light-bulb.png alt=light-bulb>
-<h1 class=mb-2>And one day…</h1>
-<p>I paid too much money for a disappointing wine at a wine shop. I miss the ease of being able to grab a bottle of wine and know that it will not be disappointing. In Portugal this is practically common sense, but I am not in Portugal anymore.</p>
-<p>Berlin has great wine shops, but I want to make this even easier. So I started Vinho Meu, where I will be curating and showcasing a handful of great portuguese wines, no more, no less, just enough.</p>
-<p>Life’s too short for sh°t wine and I am here to help you with that.</p>
+<h1 class=mb-2>Und eines Tages…</h1>
+<p>Ich habe zu viel Geld für einen enttäuschenden Wein in einem Weinladen bezahlt. Ich vermisse die Leichtigkeit, eine Flasche Wein zu greifen und weiß, dass es nicht enttäuschend sein wird. In Portugal ist das praktisch der gesunde Menschenverstand, aber ich bin nicht mehr in Portugal.</p>
+<p>Berlin hat tolle Weinläden, aber das möchte ich noch einfacher machen. Also habe ich Vinho Meu gegründet, wo ich eine Handvoll großartiger portugiesischer Weine kuratieren und präsentieren werde, nicht mehr und nicht weniger, gerade genug.</p>
+<p>Das Leben ist zu kurz für sh°t Wein und ich bin hier, um Ihnen dabei zu helfen.</p>
 </div>
 </div>
 <div class=homepage__about__img-container>
