--- a/de/wines/convento-da-vila-colheita-doc/index.html
+++ b/de/wines/convento-da-vila-colheita-doc/index.html
@@ -13,7 +13,7 @@ Convento da Vila Colheita &ndash; Vinhomeu
 <body>
 <nav class=navigation>
 <ul><li>
-<a href=/weinsorten/>Weinsorten</a>
+<a href=/de/varieties/>Weinsorten</a>
 </li><li>
 <a href=/de/about/>Über</a>
 </li>
@@ -28,8 +28,7 @@ Convento da Vila Colheita &ndash; Vinhomeu
 <h1>Convento da Vila Colheita</h1>
 </div>
 <div class="single__content mt-4">
-<p>Syrah, Alicante Bouschet and Touriga Nacional: an eclectic blend of amazing grapes. 15 months from harvest to your glass. You will get a dark ruby red wine with intense mature red fruit fragrances, or should I say grapes that endured some of the highest temperatures of the country? Best enjoyed with red meat, fatty fisch and soft cheese. Don&rsquo;t forget to invite your friends!</p>
-<p><a href=/region/portugal>Link</a></p>
+<p>Syrah, Alicante Bouschet und Touriga Nacional: eine vielseitige Mischung aus erstaunlichen Trauben. 15 Monate von der Ernte bis zum Glas. Sie erhalten einen dunklen rubinroten Wein mit intensiven Düften von reifen roten Früchten, oder sollte ich sagen Trauben, die einige der höchsten Temperaturen des Landes ausgehalten haben? Am besten zu rotem Fleisch, fettem Fisch und Weichkäse. Vergiss nicht, deine Freunde einzuladen!</p>
 </div>
 </div>
 </body>
