--- a/de/wines/zimbro-doc/index.html
+++ b/de/wines/zimbro-doc/index.html
@@ -13,7 +13,7 @@ Zimbro &ndash; Vinhomeu
 <body>
 <nav class=navigation>
 <ul><li>
-<a href=/weinsorten/>Weinsorten</a>
+<a href=/de/varieties/>Weinsorten</a>
 </li><li>
 <a href=/de/about/>Über</a>
 </li>
@@ -28,7 +28,7 @@ Zimbro &ndash; Vinhomeu
 <h1>Zimbro</h1>
 </div>
 <div class="single__content mt-4">
-<p>Douro in it&rsquo;s full power! This thick inky tinto made of the local Touriga Nacional, Tinta Roriz and Touriga Francesa is a great example of this region&rsquo;s exceptional wines. And this family run vineyard is pure winemaker art, that you should definitely about. Enjoy it best with friends and a nice plate of pasta, red meats or your favourite cheese.</p>
+<p>Douro in voller Kraft! Dieser dicke, tintofarbene Tinto aus den lokalen Touriga Nacional, Tinta Roriz und Touriga Francesa gehört laut vivino.com zu den Top 7% der besten Weine der Welt und ist ein großartiges Beispiel für die außergewöhnlichen Weine dieser Region. Dieses familiengeführte Weingut ist reine Winzerkunst, die Sie unbedingt besuchen sollten. Genießen Sie ihn am besten mit Freunden und einem schönen Teller Pasta, rotem Fleisch oder Ihrem Lieblingskäse.</p>
 </div>
 </div>
 </body>
