--- a/de/about/index.html
+++ b/de/about/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=description content="Vinhomeu is dedicated to showcasing distinct and memorable Portuguese wines that tell the story of time and place with each sip.">
 <title>
-And one day… &ndash; Vinhomeu
+Und eines Tages… &ndash; Vinhomeu
 </title>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link href="https://fonts.googleapis.com/css2?family=Quando&family=ZCOOL+KuaiLe&display=swap" rel=stylesheet>
@@ -13,7 +13,7 @@ And one day… &ndash; Vinhomeu
 <body>
 <nav class=navigation>
 <ul><li>
-<a href=/weinsorten/>Weinsorten</a>
+<a href=/de/varieties/>Weinsorten</a>
 </li><li>
 <a href=/de/about/>Über</a>
 </li>
@@ -25,19 +25,19 @@ And one day… &ndash; Vinhomeu
 </nav>
 <div class=single>
 <div class=single__header style=background-image:url(/images/about-bg.jpg)>
-<h1>And one day…</h1>
+<h1>Und eines Tages…</h1>
 </div>
 <div class="single__content mt-4">
-<p>I paid too much money for a disappointing wine at a wine shop. I miss the ease of being able to grab a bottle of wine and know that it will not be disappointing. In Portugal this is practically common sense, but I am not in Portugal anymore.</p>
-<p>Berlin has great wine shops, but I want to make this even easier. So I started Vinho Meu, where I will be curating and showcasing a handful of great portuguese wines, no more, no less, just enough.</p>
-<p>Life’s too short for sh°t wine and I am here to help you with that.</p>
-<p>I was born in a wine country. Wine is part of our daily life, there is at least one glass of it present at every meal (back in the days even at breakfast). The supermarket is filled with reds, whites, rosés and verdes.</p>
-<p>Wine is omnipresent, it’s a common place, absolutely normal. My grandparents had grapes and made wine, just for the simple fact that it was cheaper to do so and you could also make some money with it, by either selling the grapes or the final product (and also from working for others during harvest).</p>
-<p>It was something done out of need, a normal part of life in Portugal&rsquo;s rural areas. Because of these humble origins, my take on wine has always been very simple: full bodied and velvety, I cannot come up with flavours, but only think of grapes that got the right amount of sun, the right amount of rain and were properly looked after.</p>
-<p>And I have been lucky enough to witness this care first hand. My grandparents always had wine grapes and oak barrels, and my father also got more and more into making wine: testing, trying, using his in-laws’ vineyards, dedicating time and money to make sure the grapes were fertilized enough and the weeds on the ground were eliminated.</p>
-<p>The pure definition of biological agriculture: 1 person and its fruits.</p>
-<p>As the years passed, the size of the vineyard decreased, the expertise grew and wine was maturing alongside, new grapes were introduced, velvety tones and full body pours were coming of age.</p>
-<p>As for me, I stopped complaining about getting up early and then napping under some massive vine bower. Humans and wine alike, we all mature so I started to be more interested in it alongside the whole family. Harvesting the grapes became a second Christmas for us.</p>
+<p>Ich habe zu viel Geld für einen enttäuschenden Wein in einem Weinladen bezahlt. Ich vermisse die Leichtigkeit, eine Flasche Wein zu greifen und weiß, dass es nicht enttäuschend sein wird. In Portugal ist das praktisch der gesunde Menschenverstand, aber ich bin nicht mehr in Portugal.</p>
+<p>Berlin hat tolle Weinläden, aber das möchte ich noch einfacher machen. Also habe ich Vinho Meu gegründet, wo ich eine Handvoll großartiger portugiesischer Weine kuratieren und präsentieren werde, nicht mehr und nicht weniger, gerade genug.</p>
+<p>Das Leben ist zu kurz für sh°t Wein und ich bin hier, um Ihnen dabei zu helfen.</p>
+<p>Ich wurde in einem Weinland geboren. Wein gehört zu unserem täglichen Leben, zu jeder Mahlzeit (früher sogar beim Frühstück) ist mindestens ein Glas davon vorhanden. Der Supermarkt ist gefüllt mit Rot-, Weiß-, Rosé- und Verdes.</p>
+<p>Wein ist allgegenwärtig, ein alltäglicher Ort, absolut normal. Meine Großeltern hatten Trauben und machten Wein, nur weil es billiger war und man damit auch Geld verdienen konnte, entweder durch den Verkauf der Trauben oder das Endprodukt (und auch durch die Arbeit für andere während der Ernte).</p>
+<p>Es war etwas, das aus Not getan wurde, ein normaler Teil des Lebens in Portugals ländlichen Gebieten. Aufgrund dieser bescheidenen Herkunft war meine Einstellung zum Wein immer sehr einfach: Vollmundig und samtig, ich kann keine Aromen finden, sondern denke nur an Trauben, die die richtige Menge Sonne, die richtige Menge Regen bekommen und richtig gepflegt wurden nach dem.</p>
+<p>Und ich hatte das Glück, diese Pflege hautnah miterleben zu können. Meine Großeltern hatten immer Weintrauben und Eichenfässer, und auch mein Vater hat sich immer mehr mit der Weinherstellung beschäftigt: Testen, Ausprobieren, die Weinberge seiner Schwiegereltern nutzen, Zeit und Geld investieren, um sicherzustellen, dass die Trauben genug gedüngt und das Unkraut entfernt ist der Boden wurde beseitigt.</p>
+<p>Die reine Definition der biologischen Landwirtschaft: 1 Person und ihre Früchte.</p>
+<p>Im Laufe der Jahre verkleinerte sich der Weinberg, das Know-how wuchs und der Wein reifte mit, neue Trauben wurden eingeführt, samtige Töne und vollmundige Abgüsse wurden erwachsen.</p>
+<p>Was mich betrifft, ich hörte auf, mich darüber zu beschweren, dass ich früh aufstand und dann unter einer riesigen Weinlaube ein Nickerchen machte. Menschen und Wein gleichermaßen, wir alle reifen, also habe ich angefangen, mich zusammen mit der ganzen Familie mehr dafür zu interessieren. Die Weinlese wurde für uns zu einem zweiten Weihnachtsfest.</p>
 </div>
 </div>
 </body>
