--- a/de/varieties/index.html
+++ b/de/varieties/index.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=description content="Vinhomeu is dedicated to showcasing distinct and memorable Portuguese wines that tell the story of time and place with each sip.">
 <title>
-Varieties &ndash; Vinhomeu
+Sorten &ndash; Vinhomeu
 </title>
 <link rel=preconnect href=https://fonts.gstatic.com>
 <link href="https://fonts.googleapis.com/css2?family=Quando&family=ZCOOL+KuaiLe&display=swap" rel=stylesheet>
@@ -13,7 +13,7 @@ Varieties &ndash; Vinhomeu
 <body>
 <nav class=navigation>
 <ul><li>
-<a href=/weinsorten/>Weinsorten</a>
+<a href=/de/varieties/>Weinsorten</a>
 </li><li>
 <a href=/de/about/>Über</a>
 </li>
@@ -25,27 +25,27 @@ Varieties &ndash; Vinhomeu
 </nav>
 <div class=single>
 <div class=single__header style=background-image:url(/images/region-portugal-bg.jpg)>
-<h1>Varieties</h1>
+<h1>Sorten</h1>
 </div>
 <div class="single__content mt-4">
 <h1 id=vinho-verde>Vinho Verde</h1>
-<p>Verde stands for green. Yes green, there is a green wine out there and it grows in Minho, a region on the very north of Portugal that rhymes exquisitely with &ldquo;vinho&rdquo; and funilly enough it is one of the greenest in the whole country.</p>
-<p>No surprise then that this is home to the DOC region of vinho verde grapes that you will find nowhere else in the world. Back in the days, thanks to a glitch in the fermentation process, the wine ended up having more &ldquo;bubbles&rdquo; than usual.</p>
-<p>It ends up, that people quite liked that mistake! Yet don&rsquo;t be mistaken: it&rsquo;s not sparkling, it&rsquo;s not prosecco, it&rsquo;s vinho verde and it&rsquo;s best consumed with loved ones, in summer, on ice if you may!</p>
+<p>Verde steht für Grün. Ja grün, es gibt einen grünen Wein und er wächst in Minho, einer Region ganz im Norden Portugals, die sich wunderbar auf &ldquo;vinho&rdquo; reimt und lustigerweise eine der grünsten im ganzen Land ist.</p>
+<p>Kein Wunder also, dass hier die DOC-Region der Vinho Verde-Trauben beheimatet ist, die Sie sonst nirgendwo auf der Welt finden. Früher hatte der Wein dank eines Fehlers im Fermentationsprozess mehr &ldquo;Blasen&rdquo; als üblich.</p>
+<p>Es endet damit, dass die Leute diesen Fehler sehr mochten! Aber täuschen Sie sich nicht: Es ist nicht prickelnd, es ist kein Prosecco, es ist Vinho Verde und es wird am besten mit den Lieben konsumiert, im Sommer, wenn Sie dürfen auf Eis!</p>
 <h1 id=rose>Rose</h1>
-<p>&ldquo;Cor-de-rosa?&rdquo; My dad told me that, once I was so surprised to see a pink wine that I begged him to try it, it seemed so fresh and inviting, I probably thought it would taste like strawberries.</p>
-<p>I was 9, and it didn&rsquo;t!</p>
-<p>Fast forward into the future and now this is my kind of strawberry lemonade! Rosé is beloved worldwide, it&rsquo;s vibrant colour makes ist relatives &ldquo;red&rdquo; and &ldquo;white&rdquo; look dull. But that is not the idea!</p>
-<p>While verdes and brancos bring you the citrus, this brings you the tropical flair to your taste buds. Grapes are so much more than just grapes, and wise hand work them well and to ist full potential!</p>
+<p>&ldquo;Cor-de-rosa?&rdquo; Mein Vater sagte mir, dass ich, als ich so überrascht war, einen rosa Wein zu sehen, ihn anflehte, ihn zu probieren, er so frisch und einladend wirkte, dass ich wahrscheinlich dachte, er würde nach Erdbeeren schmecken.</p>
+<p>Ich war 9, und das war es nicht!</p>
+<p>Schneller Vorlauf in die Zukunft und jetzt ist das meine Art von Erdbeerlimonade! Rosé ist weltweit beliebt, seine leuchtende Farbe lässt seine Verwandten &ldquo;Rot&rdquo; und &ldquo;Weiß&rdquo; matt wirken. Aber das ist nicht die Idee!</p>
+<p>Während Verdes und Brancos Ihnen die Zitrusfrüchte bringen, bringt Ihnen dies tropisches Flair auf Ihre Geschmacksknospen. Trauben sind so viel mehr als nur Trauben, und weise Handarbeit sie gut und zu ihrem vollen Potenzial!</p>
 <h1 id=vinho-branco>Vinho Branco</h1>
-<p>Sauvi..what? With more than 250 indigenous grapes, Portuguese winemakers prefer to stick to their roots instead of going for the internationally acclaimed and beloved Sauvignons and Chardonnays.</p>
-<p>No wonder that people are unaware of names like Malvasia Fina, Alfrocheiro and Trajadura, they are absolute tongue twisters, but taste amazing.</p>
-<p>While the prickly Vinho Verde is arguably the most famous &ldquo;white&rdquo; wine from the north of Portugal, the dry climate with almost no rainfall of the south of the country makes it more challenging to produce white wines…but not impossible.</p>
-<p>All in all excelent reasons to dive into the &ldquo;underground&rdquo; world of portuguese whites.</p>
+<p>Sauvi..was? Mit mehr als 250 autochthonen Trauben bleiben die portugiesischen Winzer lieber bei ihren Wurzeln, statt auf die international gefeierten und beliebten Sauvignons und Chardonnays zu setzen.</p>
+<p>Kein Wunder, dass die Leute Namen wie Malvasia Fina, Alfrocheiro und Trajadura nicht kennen, sie sind absolute Zungenbrecher, schmecken aber fantastisch.</p>
+<p>Während der stachelige Vinho Verde wohl der berühmteste &ldquo;Weißwein&rdquo; aus dem Norden Portugals ist, macht das trockene Klima im Süden des Landes mit fast keinen Niederschlägen die Herstellung von Weißweinen schwieriger &mldr; aber nicht unmöglich.</p>
+<p>Alles in allem gute Gründe, in die &ldquo;unterirdische&rdquo; Welt der portugiesischen Weißen einzutauchen.</p>
 <h1 id=tinto>Tinto</h1>
-<p>In Portugal, the most renowned and beloved wine regions of the country - Douro and Alentejo - are known for their very hot summers.</p>
-<p>This heat in the final months before the harvest are the ideal boost for those sugar levels inside the grape, producing na intense and full bodied final product of deep red, or should I say tinto, deliciousness.</p>
-<p>Pour a glass of one of these wines and you will see the sinuous curves of the stunning Douro valley and the cork oak filled endless plains of Alentejo. Only 400 km distance from each other and such different stories to tell.</p>
+<p>In Portugal sind die bekanntesten und beliebtesten Weinregionen des Landes - Douro und Alentejo - für ihre sehr heißen Sommer bekannt.</p>
+<p>Diese Hitze in den letzten Monaten vor der Ernte ist der ideale Schub für den Zuckergehalt in der Traube und erzeugt ein intensives und vollmundiges Endprodukt von tiefroter, oder sollte ich sagen tinto, Köstlichkeit.</p>
+<p>Gießen Sie ein Glas eines dieser Weine ein und Sie werden die geschwungenen Kurven des atemberaubenden Douro-Tals und die mit Korkeichen gefüllten endlosen Ebenen des Alentejo sehen. Nur 400 km voneinander entfernt und so unterschiedliche Geschichten zu erzählen.</p>
 </div>
 </div>
 </body>
