--- a/de/wines/santo-do-monte/index.html
+++ b/de/wines/santo-do-monte/index.html
@@ -13,7 +13,7 @@ Santo do Monte &ndash; Vinhomeu
 <body>
 <nav class=navigation>
 <ul><li>
-<a href=/weinsorten/>Weinsorten</a>
+<a href=/de/varieties/>Weinsorten</a>
 </li><li>
 <a href=/de/about/>Über</a>
 </li>
@@ -28,8 +28,7 @@ Santo do Monte &ndash; Vinhomeu
 <h1>Santo do Monte</h1>
 </div>
 <div class="single__content mt-4">
-<p>This &ldquo;Saint of the Hill'' embodies the freshness that a good Vinho Verde should always aim to transmit: a long summer evening in a citrus orchard. It&rsquo;s prickly, it&rsquo;s fresh and its best served cold, even on ice if you may. This should be your new aperitivo, your new &ldquo;Sekt auf Eis&rdquo;, the wine everyone wants you to bring to their dinner parties, lunches or BBQ.</p>
-<p><a href=/region/portugal>Link</a></p>
+<p>Dieser &ldquo;Saint of the Hill&rdquo; verkörpert die Frische, die ein guter Vinho Verde immer vermitteln sollte: einen langen Sommerabend in einer Zitrusplantage. Es ist stachelig, frisch und wird am besten kalt serviert, sogar auf Eis, wenn Sie dürfen. Dies sollte Ihr neuer Aperitivo sein, Ihr neuer &ldquo;Sekt auf Eis&rdquo;, der Wein, den jeder von Ihnen zu seinen Dinnerpartys, Mittagessen oder Grillabenden mitbringen möchte.</p>
 </div>
 </div>
 </body>
