deploy: 0d9564c149e574f9a29dd8e26e6c5ddb4c274246

--- a/de/varieties/index.html
+++ b/de/varieties/index.html
@@ -29,9 +29,9 @@ Sorten &ndash; Vinhomeu
 </div>
 <div class="single__content mt-4">
 <h1 id=vinho-verde>Vinho Verde</h1>
-<p>Verde steht für Grün. Ja grün, es gibt einen grünen Wein und er wächst in Minho, einer Region ganz im Norden Portugals, die sich wunderbar auf &ldquo;vinho&rdquo; reimt und lustigerweise eine der grünsten im ganzen Land ist.</p>
-<p>Kein Wunder also, dass hier die DOC-Region der Vinho Verde-Trauben beheimatet ist, die Sie sonst nirgendwo auf der Welt finden. Früher hatte der Wein dank eines Fehlers im Fermentationsprozess mehr &ldquo;Blasen&rdquo; als üblich.</p>
-<p>Es endet damit, dass die Leute diesen Fehler sehr mochten! Aber täuschen Sie sich nicht: Es ist nicht prickelnd, es ist kein Prosecco, es ist Vinho Verde und es wird am besten mit den Lieben konsumiert, im Sommer, wenn Sie dürfen auf Eis!</p>
+<p>Verde steht für grün. Ja, grün! Es gibt einen grünen Wein und er wird in Minho angebaut, einer Region ganz im Norden Portugals. Minho reimt sich wunderbar auf &ldquo;vinho&rdquo; und passenderweise ist diese Region eine der grünsten im ganzen Land. Kein Wunder also, dass hier die DOC-Region* der Vinho-Verde-Trauben beheimatet, die es nirgendwo sonst auf der Welt gibt.</p>
+<p>Im Gärungsprozess unterlief der Legende nach einem Winzer eines Tages wohl ein Fehler, sodass der Wein spritziger wurde als geplant. Doch letztlich ist dieser Fehler zu einer portugiesischen Erfolgsgeschichte geworden. diesen Fehler sehr gemocht und zur Erfolgsgeschichte geworden. Aber seid nicht getäuscht: Es ist kein Sekt und kein Prosecco! Vinho Verde trinkt man am besten mit seinen Liebsten und im Sommer auf Eis.</p>
+<p>*DOC (Denominação de Origem Controlada) bedeutet, dass ausschließlich einheimische Rebsorten benutzt wurden.</p>
 <h1 id=rose>Rose</h1>
 <p>&ldquo;Cor-de-rosa?&rdquo; Mein Vater sagte mir, dass ich, als ich so überrascht war, einen rosa Wein zu sehen, ihn anflehte, ihn zu probieren, er so frisch und einladend wirkte, dass ich wahrscheinlich dachte, er würde nach Erdbeeren schmecken.</p>
 <p>Ich war 9, und das war es nicht!</p>
