deploy: d119821dc4c5c05d503de62eec277b301b4b8f16

--- a/de/index.html
+++ b/de/index.html
@@ -29,7 +29,7 @@ Vinhomeu
 <h1></h1>
 </header>
 <div class=homepage__content>
-<h1 id=vinhomeu-hat-es-sich-zum-ziel-gesetzt-unverwechselbare-und-unvergessliche-portugiesische-weine-zu-prasentieren-die-mit-jedem-schluck-die-geschichte-von-zeit-und-ort-erzahlen>Vinhomeu hat es sich zum Ziel gesetzt, unverwechselbare und unvergessliche portugiesische Weine zu prasentieren, die mit jedem Schluck die Geschichte von Zeit und Ort erzahlen.</h1>
+<h1 id=vinhomeu-hat-das-ziel-einzigartige-und-unvergessliche-portugiesische-weine-zur-schau-zu-stellen-die-mit-jedem-schluck-die-geschichte-von-zeit-und-ort-erzählen>Vinhomeu hat das Ziel, einzigartige und unvergessliche portugiesische Weine zur Schau zu stellen, die mit jedem Schluck die Geschichte von Zeit und Ort erzählen.</h1>
 </div>
 <div class=homepage__wines>
 <div class=homepage__wines-wine style=background-image:url(/images/wine-bg-0.png)>
