--- a/de/index.html
+++ b/de/index.html
@@ -29,7 +29,7 @@ Vinhomeu
 <h1></h1>
 </header>
 <div class=homepage__content>
-<h1 id=vinhomeu-hat-das-ziel-einzigartige-und-unvergessliche-portugiesische-weine-zur-schau-zu-stellen-die-mit-jedem-schluck-die-geschichte-von-zeit-und-ort-erzählen>Vinhomeu hat das Ziel, einzigartige und unvergessliche portugiesische Weine zur Schau zu stellen, die mit jedem Schluck die Geschichte von Zeit und Ort erzählen.</h1>
+<h1 id=vinhomeu-hat-das-ziel-unvergessliche-portugiesische-weine-zur-schau-zu-stellen-die-mit-jedem-schluck-die-geschichte-von-zeit-und-ort-erzählen>Vinhomeu hat das Ziel, unvergessliche portugiesische Weine zur Schau zu stellen, die mit jedem Schluck die Geschichte von Zeit und Ort erzählen.</h1>
 </div>
 <div class=homepage__wines>
 <div class=homepage__wines-wine style=background-image:url(/images/wine-bg-0.png)>
