deploy: b886ef23eac9481dc3ec092455e810dd13ba9a01

--- a/de/varieties/index.html
+++ b/de/varieties/index.html
@@ -32,20 +32,15 @@ Sorten &ndash; Vinhomeu
 <p>Verde steht für grün. Ja, grün! Es gibt einen grünen Wein und er wird in Minho angebaut, einer Region ganz im Norden Portugals. Minho reimt sich wunderbar auf &ldquo;vinho&rdquo; und passenderweise ist diese Region eine der grünsten im ganzen Land. Kein Wunder also, dass hier die DOC-Region* der Vinho-Verde-Trauben beheimatet, die es nirgendwo sonst auf der Welt gibt.</p>
 <p>Im Gärungsprozess unterlief der Legende nach einem Winzer eines Tages wohl ein Fehler, sodass der Wein spritziger wurde als geplant. Doch letztlich ist dieser Fehler zu einer portugiesischen Erfolgsgeschichte geworden. diesen Fehler sehr gemocht und zur Erfolgsgeschichte geworden. Aber seid nicht getäuscht: Es ist kein Sekt und kein Prosecco! Vinho Verde trinkt man am besten mit seinen Liebsten und im Sommer auf Eis.</p>
 <p>*DOC (Denominação de Origem Controlada) bedeutet, dass ausschließlich einheimische Rebsorten benutzt wurden.</p>
-<h1 id=rose>Rose</h1>
-<p>&ldquo;Cor-de-rosa?&rdquo; Mein Vater sagte mir, dass ich, als ich so überrascht war, einen rosa Wein zu sehen, ihn anflehte, ihn zu probieren, er so frisch und einladend wirkte, dass ich wahrscheinlich dachte, er würde nach Erdbeeren schmecken.</p>
-<p>Ich war 9, und das war es nicht!</p>
-<p>Schneller Vorlauf in die Zukunft und jetzt ist das meine Art von Erdbeerlimonade! Rosé ist weltweit beliebt, seine leuchtende Farbe lässt seine Verwandten &ldquo;Rot&rdquo; und &ldquo;Weiß&rdquo; matt wirken. Aber das ist nicht die Idee!</p>
-<p>Während Verdes und Brancos Ihnen die Zitrusfrüchte bringen, bringt Ihnen dies tropisches Flair auf Ihre Geschmacksknospen. Trauben sind so viel mehr als nur Trauben, und weise Handarbeit sie gut und zu ihrem vollen Potenzial!</p>
+<h1 id=rosé>Rosé</h1>
+<p>&ldquo;Cor-de-rosa?&rdquo; Mein Vater erzählte mir, dass ich einmal so überrascht war, einen rosafarbenen Wein zu sehen, dass ich ihn anflehte, den Wein zu probieren. Er wirkte so frisch und einladend und ich dachte wohl, er würde nach Erdbeerlimonade schmecken. Damals war ich neun und durfte ihn tatsächlich kosten. Doch weit gefehlt, von Limonade konnte keine Rede sein!</p>
+<p>Inzwischen weiß ich den rosafarbenen Wein zu schätzen, der seine roten und weißen Verwandten fast langweilig erscheinen lässt. Während &ldquo;Verdes&rdquo; und &ldquo;Brancos&rdquo; die Zitrusfrüchte rausbringen, ist Rosé ein tropischer Gaumenkitzler, der dank kürzerer Gärung der Rotweintrauben, seinen fruchtigen Charakter behält.</p>
 <h1 id=vinho-branco>Vinho Branco</h1>
-<p>Sauvi..was? Mit mehr als 250 autochthonen Trauben bleiben die portugiesischen Winzer lieber bei ihren Wurzeln, statt auf die international gefeierten und beliebten Sauvignons und Chardonnays zu setzen.</p>
-<p>Kein Wunder, dass die Leute Namen wie Malvasia Fina, Alfrocheiro und Trajadura nicht kennen, sie sind absolute Zungenbrecher, schmecken aber fantastisch.</p>
-<p>Während der stachelige Vinho Verde wohl der berühmteste &ldquo;Weißwein&rdquo; aus dem Norden Portugals ist, macht das trockene Klima im Süden des Landes mit fast keinen Niederschlägen die Herstellung von Weißweinen schwieriger &mldr; aber nicht unmöglich.</p>
-<p>Alles in allem gute Gründe, in die &ldquo;unterirdische&rdquo; Welt der portugiesischen Weißen einzutauchen.</p>
-<h1 id=tinto>Tinto</h1>
-<p>In Portugal sind die bekanntesten und beliebtesten Weinregionen des Landes - Douro und Alentejo - für ihre sehr heißen Sommer bekannt.</p>
-<p>Diese Hitze in den letzten Monaten vor der Ernte ist der ideale Schub für den Zuckergehalt in der Traube und erzeugt ein intensives und vollmundiges Endprodukt von tiefroter, oder sollte ich sagen tinto, Köstlichkeit.</p>
-<p>Gießen Sie ein Glas eines dieser Weine ein und Sie werden die geschwungenen Kurven des atemberaubenden Douro-Tals und die mit Korkeichen gefüllten endlosen Ebenen des Alentejo sehen. Nur 400 km voneinander entfernt und so unterschiedliche Geschichten zu erzählen.</p>
+<p>Sauvi&mldr;was? Mit mehr als 250 autochthonen Rebsorten bleiben die portugiesischen Winzer lieber bei ihren Wurzeln, statt auf die international bekannten und beliebten Sauvignons und Chardonnays zu setzen. Kein Wunder, dass man Namen wie Malvasia Fina, Alfrocheiro und Trajadura oder Alvarinho nicht kennt: Sie sind absolute Zungenbrecher, und verwöhnen die Zunge doch.</p>
+<p>Während der sprudelige Vinho Verde wohl der berühmteste &ldquo;Weißwein&rdquo; aus dem Norden Portugals ist, macht das trockene Klima im Süden des Landes die Produktion von Weißweinen schwieriger, doch nicht unmöglich.</p>
+<h1 id=vinho-tinto>Vinho Tinto</h1>
+<p>In Portugal sind die bekanntesten und beliebtesten Weinregionen des Landes - Douro und Alentejo - für ihre sehr heißen Sommer bekannt. Diese Hitze in den Monaten vor der Ernte ist der ideale Antrieb für den Zuckergehalt in den Trauben, was zu einem intensiven und vollmundigen Endprodukt von dunkelroter, oder sollte ich sagen, tintenfarbener, Köstlichkeit führt.</p>
+<p>Schenk Dir ein Glas eines dieser Weine ein und Sie werden die wendigen Kurven des atemberaubenden Douro-Tals und die mit Korkeichen gefüllten weiten Hügel des Alentejo sehen. Nur 400 km liegen sie voneinander entfernt und doch haben sie so unterschiedliche Geschichten zu erzählen.</p>
 </div>
 </div>
 </body>
