deploy: 79f06b94558698cac722bd26aa87213aba699bc5

--- a/de/wines/convento-da-vila-colheita-doc/index.html
+++ b/de/wines/convento-da-vila-colheita-doc/index.html
@@ -28,7 +28,7 @@ Convento da Vila Colheita &ndash; Vinhomeu
 <h1>Convento da Vila Colheita</h1>
 </div>
 <div class="single__content mt-4">
-<p>Syrah, Alicante Bouschet und Touriga Nacional: eine vielseitige Mischung aus erstaunlichen Trauben. 15 Monate von der Ernte bis zum Glas. Sie erhalten einen dunklen rubinroten Wein mit intensiven Düften von reifen roten Früchten, oder sollte ich sagen Trauben, die einige der höchsten Temperaturen des Landes ausgehalten haben? Am besten zu rotem Fleisch, fettem Fisch und Weichkäse. Vergiss nicht, deine Freunde einzuladen!</p>
+<p>Syrah, Alicante Bouschet und Touriga Nacional: eine eklektische Mischung aus erstaunlichen Reben. 15 Monate braucht es von der Ernte bis in dein Glas. Du bekommst einen dunklen, rubinroten Wein mit intensiven, reifen Aromen von roten Früchten, oder anders gesagt, von Trauben, die die südliche Hitze in sich tragen! Dieser Wein passt gut zu rotem Fleisch, fettem Fisch und Weichkäse und natürlich zu einem Abend mit Freunden.</p>
 </div>
 </div>
 </body>
