--- a/de/index.html
+++ b/de/index.html
@@ -59,7 +59,8 @@ Vinhomeu
 <p>EMPFEHLUNG: Kalt servieren</p>
 <p>VIELFALT: Grun (Vinho Verde)</p>
 </div>
-<p>Dieser &ldquo;Saint of the Hill&rdquo; verkörpert die Frische, die ein guter Vinho Verde immer vermitteln sollte: einen langen Sommerabend in einer Zitrusplantage. Es ist stachelig, frisch und wird am besten kalt serviert, sogar auf Eis, wenn Sie dürfen. Dies sollte Ihr neuer Aperitivo sein, Ihr neuer &ldquo;Sekt auf Eis&rdquo;, der Wein, den jeder von Ihnen zu seinen Dinnerpartys, Mittagessen oder Grillabenden mitbringen möchte.</p>
+<p>Der Heilige des Hügels, so sein Name verkörpert die Frische, die ein guter Vinho Verde immer mitbringen sollte und lässt an einen langen Sommerabend im ein Zitrusgarten denken.
+Zeit den “Sekt auf Eis” abzulösen. Dein neuer Aperitivo begleitet dich auf Dinnerpartys, an Mittagessen oder bei BBQs: &ldquo;Verde auf Eis&rdquo;, Prost!</p>
 </div>
 </div>
 </div>
