deploy: 4f60eeed03291e993494a0f2b1c3d6ad6292a5f3

--- a/de/index.html
+++ b/de/index.html
@@ -75,7 +75,7 @@ Zeit den “Sekt auf Eis” abzulösen. Dein neuer Aperitivo begleitet dich auf 
 <p>JAHR: 2018</p>
 <p>VIELFALT: Weiss</p>
 </div>
-<p>Dies war einer der ersten Douro-Weißweine, die von der Familie Alves de Sousa hergestellt wurden, die begann, sich den lokalen Trauben zuzuwenden, um hervorragende Weine zu produzieren. Goveio und Malvasia Fina von Vale da Raposa sind eine großartige Kombination und ein gutes Beispiel für den unterirdischen Charakter der portugiesischen Weißweinrebsorten und den einzigartigen, scharfen Geschmack, den nur das Klima des Douro-Tals ihren Trauben verleihen kann.</p>
+<p>Dies war einer der ersten Douro-Weißweine, die von der Familie Alves de Sousa produziert wurden. Sie wandten sich den lokalen Trauben zu und begannen hervorragende Weine zu produzieren. Vale da Raposa ist eine großartige Kombination aus dem &ldquo;underground&rdquo; Charakter der portugiesischen Weißwein-Rebsorten - hier Gouveio und Malvasia Fina - und dem einzigartigen, kräftigen Geschmack, den nur das Klima des Douro-Tals den Trauben verleihen kann.</p>
 </div>
 </div>
 </div>
