deploy: 465258a01f56e7fbbef7b0217cc37df79ebd03f7

--- a/de/about/index.html
+++ b/de/about/index.html
@@ -28,9 +28,9 @@ Und eines Tages… &ndash; Vinhomeu
 <h1>Und eines Tages…</h1>
 </div>
 <div class="single__content mt-4">
-<p>Ich habe zu viel Geld für einen enttäuschenden Wein in einem Weinladen bezahlt. Ich vermisse die Leichtigkeit, eine Flasche Wein zu greifen und weiß, dass es nicht enttäuschend sein wird. In Portugal ist das praktisch der gesunde Menschenverstand, aber ich bin nicht mehr in Portugal.</p>
-<p>Berlin hat tolle Weinläden, aber das möchte ich noch einfacher machen. Also habe ich Vinho Meu gegründet, wo ich eine Handvoll großartiger portugiesischer Weine kuratieren und präsentieren werde, nicht mehr und nicht weniger, gerade genug.</p>
-<p>Das Leben ist zu kurz für sh°t Wein und ich bin hier, um Ihnen dabei zu helfen.</p>
+<p>&mldr; war ich im Weinladen, nur um hinterher festzustellen, dass ich viel zu Geld für einen mittelprächtigen Wein gezahlt hatte. Da fiel mir auf, wie sehr ich das Gefühl von Leichtigkeit vermisse, einfach eine Flasche aus dem Regal zu nehmen und mir sicher sein zu können, dass ich nicht enttäuscht werde. In Portugal ist das einfach, aber ich lebe nun schon lange nicht mehr dort.</p>
+<p>Berlin hat zwar tolle Weinläden, aber ich denke, es könnte noch leichter sein, einen guten Wein zu finden. Also habe ich Vinho Meu gegründet, um eine Handvoll großartiger portugiesischer Weine nach Deutschland zu bringen.</p>
+<p>Das Leben ist zu kurz, um Fehlentscheidungen beim Wein Kaufen zu machen.</p>
 <p>Ich wurde in einem Weinland geboren. Wein gehört zu unserem täglichen Leben, zu jeder Mahlzeit (früher sogar beim Frühstück) ist mindestens ein Glas davon vorhanden. Der Supermarkt ist gefüllt mit Rot-, Weiß-, Rosé- und Verdes.</p>
 <p>Wein ist allgegenwärtig, ein alltäglicher Ort, absolut normal. Meine Großeltern hatten Trauben und machten Wein, nur weil es billiger war und man damit auch Geld verdienen konnte, entweder durch den Verkauf der Trauben oder das Endprodukt (und auch durch die Arbeit für andere während der Ernte).</p>
 <p>Es war etwas, das aus Not getan wurde, ein normaler Teil des Lebens in Portugals ländlichen Gebieten. Aufgrund dieser bescheidenen Herkunft war meine Einstellung zum Wein immer sehr einfach: Vollmundig und samtig, ich kann keine Aromen finden, sondern denke nur an Trauben, die die richtige Menge Sonne, die richtige Menge Regen bekommen und richtig gepflegt wurden nach dem.</p>
